tdf#135488 ensure something is selected in experimental theme colorset

so double click without something selected can't normally happen,
and bail out and do nothing if it does happen

Change-Id: Ic9ed756d4b2b51b87f09786ab7b8506b2d720d84